--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,14 @@
     <script defer src="/__/firebase/8.2.4/firebase-analytics.js"></script>
     <script defer src="/__/firebase/8.2.4/firebase-remote-config.js"></script>
     <script defer src="/__/firebase/8.2.4/firebase-performance.js"></script>
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/d3.min.js"></script>
+    <script src="./js/graph.js"></script>
+    <script src="./index.js"></script>
+    <script src="./js/popper.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
     <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
@@ -24,6 +32,31 @@
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
   </head>
   <body>
+    <div id="title">Pandemic Activity Problem</div>
+    <div class="container">
+      <div class="row">
+        <div class="col-8">
+          <div id="graph"></div>
+        </div>
+        <div class="col">
+          <div class="col-item">
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+                Select a Heuristic
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                <li><button class="dropdown-item" onclick="selectHeuristic('Greedy');">Greedy</button></li>
+                <li><button class="dropdown-item" onclick="selectHeuristic('Louvain');">Louvain</button></li>
+                <li><button class="dropdown-item" onclick="selectHeuristic('Spectral');">Spectral</button></li>
+              </ul>
+            </div>
+          </div>
+          <div class='col-item'>
+            <button type="button" class="btn btn-primary">Run Heuristic</button>
+          </div>
+        </div>
+      </div>
+    </div>
    
   </body>
 </html>
