--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,14 @@
     <script defer src="/__/firebase/8.2.4/firebase-remote-config.js"></script>
     <script defer src="/__/firebase/8.2.4/firebase-performance.js"></script>
     <script src="./js/jquery-3.5.1.min.js"></script>
-    <script src="./js/d3.min.js"></script>
+    <!-- <script src="./js/d3.min.js"></script> -->
+    
+    <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="./js/graph.js"></script>
-    <script src="./index.js"></script>
     <script src="./js/popper.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <script defer src="./index.js"></script>
     <link href="index.css" rel="stylesheet">
     <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
@@ -36,9 +38,17 @@
     <div class="container">
       <div class="row">
         <div class="col-8">
-          <div id="graph"></div>
+          <svg width="960" height="600"></svg>
         </div>
         <div class="col">
+          <div class="col-item">
+            <form>
+              <div class="form-group">
+                <label class="file-upload-label" for="jsonInputFile">Upload an input JSON graph File</label>
+                <input type="file" class="form-control-file" id="jsonInputFile" accept=".json">
+              </div>
+            </form>
+          </div>
           <div class="col-item">
             <div class="dropdown">
               <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
