--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="./js/graph.js"></script>
+    <script src="./js/heuristics.js"></script>
     <script src="./js/popper.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -37,8 +38,8 @@
     <div id="title">Pandemic Activity Problem</div>
     <div class="container">
       <div class="row">
-        <div class="col-8">
-          <svg width="960" height="600"></svg>
+        <div class="col-12">
+          <svg></svg>
         </div>
         <div class="col">
           <div class="col-item">
@@ -62,7 +63,7 @@
             </div>
           </div>
           <div class='col-item'>
-            <button type="button" class="btn btn-primary">Run Heuristic</button>
+            <button type="button" class="btn btn-primary" onclick="runHeuristic();">Run Heuristic</button>
           </div>
         </div>
       </div>
