--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <script src="./js/jquery-3.5.1.min.js"></script>
     <!-- <script src="./js/d3.min.js"></script> -->
     
-    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="./js/vis-network.min.js"></script>
     <script src="./js/graph.js"></script>
     <script src="./js/heuristics.js"></script>
     <script src="./js/popper.min.js"></script>
@@ -39,7 +39,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <svg></svg>
+          <div id="graph"></div>
         </div>
         <div class="col">
           <div class="col-item">
@@ -57,13 +57,16 @@
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                 <li><button class="dropdown-item" onclick="selectHeuristic('Greedy');">Greedy</button></li>
-                <li><button class="dropdown-item" onclick="selectHeuristic('Louvain');">Louvain</button></li>
-                <li><button class="dropdown-item" onclick="selectHeuristic('Spectral');">Spectral</button></li>
+                <!-- <li><button class="dropdown-item" onclick="selectHeuristic('Louvain');">Louvain</button></li>
+                <li><button class="dropdown-item" onclick="selectHeuristic('Spectral');">Spectral</button></li> -->
               </ul>
             </div>
           </div>
           <div class='col-item'>
             <button type="button" class="btn btn-primary" onclick="runHeuristic();">Run Heuristic</button>
+          </div>
+          <div class='col-item'>
+            <button type="button" class="btn btn-danger" onclick="renderOriginal();">Back to Original Graph</button>
           </div>
         </div>
       </div>
