--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
       </div>
     </div>
     <footer>
-        <p class="copyright">Stony Brook University Algorithms Reading Breakout Group © 2021</p>
+        <p class="copyright">Jason Huang @ Stony Brook University Algorithms Reading Breakout Group © 2021</p>
     </footer>
   </body>
 </html>
